--- a/card.html
+++ b/card.html
@@ -7,7 +7,7 @@
     <body>
         <div class="cards">
             <img 
-                src="Genshin-navia-splash.png" 
+                src="/Genshin-navia-splash.png" 
                 alt="Navia with her threatening smile"
                 class="navia-img">
             <div class="info">
